# CrispASR

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  COMPARISON.md  HISTORY.md  LEARNINGS.md  Makefile  PERFORMANCE.md  PLAN.md  README.md  README_sycl.md  build-ios.sh  build-vulkan.bat  build-wasm.sh  build-windows.bat  docker-compose.cuda.yml  docker-compose.vulkan.yml
.devops/: run-server.sh
bindings/: CMakeLists.txt
bindings/javascript/: CMakeLists.txt  README.md  emscripten.cpp  package-tmpl.json  package.json
ci/: README.md
cmake/: DefaultTargetOptions.cmake  FindFFmpeg.cmake  crispasr-config.cmake.in  crispasr.pc.in  git-vars.cmake  whisper-config.cmake.in
crisp_lid/: CMakeLists.txt
crisp_lid/include/: crisp_lid.h
crisp_lid/src/: lid_fasttext.cpp  text_lid_dispatch.cpp
crisp_punc/: CMakeLists.txt
crisp_punc/include/: crisp_punc.h
crisp_punc/src/: fireredpunc.cpp  pcs.cpp
crisp_truecase/: CMakeLists.txt
crisp_truecase/include/: crisp_truecase.h
crispasr/: Cargo.toml  README.md
crispasr-sys/: Cargo.toml  README.md  build.rs
docs/: architecture.md  bindings.md  cli.md  contributing.md  diarization-speakers.md  diff-harness-coverage.md  feature-matrix.html  feature-matrix.md  install.md  performance.md  quantize.md  server.md  streaming.md  testing.md  tts.md  voiceprint-speaker-recognition-design.md
examples/: common-crispasr.cpp  common-ggml.cpp  server.py
ggml/: CMakeLists.txt
glint/: CMakeLists.txt  README.md
glint/include/glint/: glint.h
glint/src/: aac_coder.cpp  aac_coder.hpp  aac_coder_types_fwd.hpp  aac_encoder.cpp  aac_mdct.cpp  aac_mdct.hpp  aac_psy.cpp  aac_psy.hpp  aac_tables.hpp  aac_tns.cpp  aac_tns.hpp  bitstream.cpp  bitstream.hpp  encoder.cpp  encoder.hpp  fixedpoint.hpp  huffman.cpp  huffman.hpp  intmath.hpp  mdct.cpp  mdct.hpp  psycho.cpp  psycho.hpp  quantize.cpp  quantize.hpp  reservoir.cpp  reservoir.hpp  simd.hpp  subband.cpp  subband.hpp  tables.hpp
handover-prompts/: f5-tts-129-continuation.md  f5-tts-129-handover.md  nemotron-gpu-sched-and-streaming.md  piper-tts-128-handover.md  session-2026-06-08-zonos-moonshine.md
hf-space/: Dockerfile  README.md  app.py
hf_readmes/: MOSS-Transcribe-preview-2B-GGUF.md  chatterbox-GGUF.md  cohere-transcribe-03-2026-GGUF.md  cohere-transcribe-arabic-07-2026-GGUF.md  csm-1b-GGUF.md  dia-1.6b-GGUF.md  distil-large-v3-GGUF.md  dots-tts-soar-GGUF.md  firered-asr2-aed-GGUF.md  glm-asr-nano-GGUF.md  granite-speech-4.1-2b-nar-GGUF.md  granite-speech-4.1-2b-plus-GGUF.md  kyutai-stt-1b-GGUF.md  m2m100-418m-GGUF.md  mega-asr-GGUF.md  moonshine-base-GGUF.md  moonshine-base-de-fidoriel-GGUF.md  moonshine-tiny-de-dattazigzag-GGUF.md  moonshine-tiny-de-fidoriel-GGUF.md  omniASR-CTC-300M-v2-GGUF.md  omniasr-llm-1b-GGUF.md  omniasr-llm-300m-v2-GGUF.md  orpheus-3b-base-GGUF.md  parakeet-ctc-1.1b-ja-GGUF.md  parler-tts-mini-v1.1-GGUF.md  piper-voices-GGUF.md  punctuate-all-GGUF.md  qwen3-asr-0.6b-GGUF.md  reazonspeech-nemo-v2-GGUF.md  sensevoice-small-GGUF.md  stt-de-fastconformer-hybrid-ctc-large-GGUF.md  truecaser-de.md  vibevoice-1.5b-GGUF.md  vibevoice-7b-GGUF.md  vibevoice-realtime-0.5b-GGUF.md  voxcpm2-GGUF.md  wav2vec2-base-german-cv9-GGUF.md  wav2vec2-large-xlsr-53-english-GGUF.md  wav2vec2-large-xlsr-53-german-GGUF.md  wav2vec2-large-xlsr-53-german-cv13-GGUF.md  (+3 more)
include/: crispasr.h  crispasr_session.h
models/: README.md  chatterbox_paths.py  convert-arkasr-to-gguf.py  convert-bark-to-gguf.py  convert-canary-qwen-to-gguf.py  convert-chatterbox-gianni-to-gguf.py  convert-chatterbox-to-gguf.py  convert-cosyvoice3-s3tok-to-gguf.py  convert-cosyvoice3-to-gguf.py  convert-cosyvoice3-voices-to-gguf.py  convert-csm-to-gguf.py  convert-dac-to-gguf.py  convert-dacvae-to-gguf.py  convert-dia-to-gguf.py  convert-dots-tts-to-gguf.py  convert-fastpitch-to-gguf.py  convert-fullstop-punc-to-gguf.py  convert-funasr-to-gguf.py  convert-gemma4-e2b-to-gguf.py  convert-granite-nle-to-gguf.py  convert-h5-to-coreml.py  convert-h5-to-ggml.py  convert-higgs-stt-to-gguf.py  convert-irodori-tts-to-gguf.py  convert-kokoro-to-gguf.py  convert-lfm2-audio-to-gguf.py  convert-marblenet-vad-to-gguf.py  convert-melotts-to-gguf.py  convert-mimo-asr-to-gguf.py  convert-moss-audio-to-gguf.py  convert-moss-transcribe-to-gguf.py  convert-omnivoice-to-gguf.py  convert-omnivoice-tokenizer-to-gguf.py  convert-openvoice2-to-gguf.py  convert-orpheus-to-gguf.py  convert-outetts-to-gguf.py  convert-parakeet-to-gguf.py  convert-parler-to-gguf.py  convert-pcs-to-gguf.py  convert-piper-to-gguf.py  (+20 more)
python/: README.md  pyproject.toml
samples/: README.md  jfk.m4a  jfk.webm
scripts/: dev-build.ps1  export-hf-space.ps1  sync-version.py
src/: CMakeLists.txt  ark_asr.cpp  ark_asr.h  audioseal.cpp  bananamind_tts.cpp  bark_tts.cpp  bert_encoder.cpp  bert_encoder.h  canary.cpp  canary.h  canary_qwen.cpp  canary_qwen.h  chatterbox.cpp  chatterbox.h  chatterbox_campplus.cpp  chatterbox_campplus.h  chatterbox_s3gen.cpp  chatterbox_s3gen.h  chatterbox_text_prep.h  cohere.cpp  cohere.h  cosyvoice3_tts.cpp  crispasr.cpp  crispasr_aligner.cpp  crispasr_aligner.h  crispasr_audio.cpp  crispasr_c_api.cpp  crispasr_cache.cpp  crispasr_cache.h  crispasr_diarize.cpp  crispasr_diarize.h  crispasr_diarize_internal.h  crispasr_enhance.cpp  crispasr_enhance.h  crispasr_imatrix.cpp  crispasr_imatrix.h  crispasr_lid.cpp  crispasr_lid.h  crispasr_mic.cpp  crispasr_model_registry.cpp  (+95 more)
tests/: CMakeLists.txt  benchmark_asr.py  env-live-tests.sh  test-bench-enabled.cpp  test-c.c  test-core-decode.cpp  test-core-lang-names.cpp  test-core-sentencepiece.cpp  test-cpu-ops-to-f32.cpp  test-crispasr-cache.cpp  test-crispasr-speaker-resample.cpp  test-crispasr.js  test-diarize-pyannote.cpp  test-dots-tts-params.cpp  test-dry-run-resolve.sh  test-firered-asr-params.cpp  test-g2p-en.cpp  test-generation-controls-live.sh  test-granite-maxlen.sh  test-internal-chunking-gate.cpp  test-issue-114-chunk-context-gate.cpp  test-issue-79.cpp  test-issue-89-long-audio-fallback.cpp  test-kugelaudio-params.cpp  (+52 more)
(+512 files in other folders)
